; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_osinst.c_vfslogAccess.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_osinst.c_vfslogAccess.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (%struct.TYPE_3__*, i8*, i32, i32*)* }

@OS_ACCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i32*)* @vfslogAccess to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vfslogAccess(i32* %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %11 = call i64 (...) @vfslog_time()
  store i64 %11, i64* %10, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call %struct.TYPE_3__* @REALVFS(i32* %12)
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32 (%struct.TYPE_3__*, i8*, i32, i32*)*, i32 (%struct.TYPE_3__*, i8*, i32, i32*)** %14, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call %struct.TYPE_3__* @REALVFS(i32* %16)
  %18 = load i8*, i8** %6, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 %15(%struct.TYPE_3__* %17, i8* %18, i32 %19, i32* %20)
  store i32 %21, i32* %9, align 4
  %22 = call i64 (...) @vfslog_time()
  %23 = load i64, i64* %10, align 8
  %24 = sub nsw i64 %22, %23
  store i64 %24, i64* %10, align 8
  %25 = load i32*, i32** %5, align 8
  %26 = load i32, i32* @OS_ACCESS, align 4
  %27 = load i64, i64* %10, align 8
  %28 = load i32, i32* %9, align 4
  %29 = load i32, i32* %7, align 4
  %30 = load i32*, i32** %8, align 8
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @vfslog_call(i32* %25, i32 %26, i32 0, i64 %27, i32 %28, i32 %29, i32 %31)
  %33 = load i32*, i32** %5, align 8
  %34 = load i8*, i8** %6, align 8
  %35 = call i32 @vfslog_string(i32* %33, i8* %34)
  %36 = load i32, i32* %9, align 4
  ret i32 %36
}

declare dso_local i64 @vfslog_time(...) #1

declare dso_local %struct.TYPE_3__* @REALVFS(i32*) #1

declare dso_local i32 @vfslog_call(i32*, i32, i32, i64, i32, i32, i32) #1

declare dso_local i32 @vfslog_string(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
